--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "keywords": [],
   "author": "Łukasz Zygmunt",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node --loader ts-node/esm",
+    "start:watch": "node --loader ts-node/esm --watch"
   },
   "license": "ISC",
   "description": "",
+  "type": "module",
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.1",
