--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "keywords": [],
   "author": "Łukasz Zygmunt",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "start": "node --loader ts-node/esm",
     "start:watch": "node --loader ts-node/esm --watch"
+  },
+  "imports": {
+    "#*": "./src/*"
   },
   "license": "ISC",
   "description": "",
   "type": "module",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
