--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "target": "ESNext",
     "outDir": "dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "#*": ["./src/*"]
+    },
+    "allowImportingTsExtensions": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "ts-node": { "esm": true }
 }
